--- a/app/src/main/res/layout/fragment_form_computadora.xml
+++ b/app/src/main/res/layout/fragment_form_computadora.xml
@@ -21,7 +21,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingHorizontal="5dp">
+        android:paddingHorizontal="5dp"
+        android:layout_marginBottom="5dp">
+
+
+        <ImageView
+            android:id="@+id/imgCompu"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            tools:src="@tools:sample/avatars" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="URL de la imagen"
+            android:maxLength="20"
+            android:orientation="vertical">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editTextImagen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
